# leveldb-multiplatform

./: .gitignore  .gitmodules  README.md  RELEASE.md  build.gradle.kts  build_native.sh  gradle.properties  publish_local.sh  publish_remote.sh  settings.gradle.kts
.github/workflows/: android.yml
example/: build.gradle.kts
example/src/main/: AndroidManifest.xml
example/src/main/java/com/edwardstock/leveldb/example/: LevelDbApp.kt  LevelDbModule.kt  MainActivity.kt  MainViewModel.kt  RowsAdapter.kt  TextItem.kt
example/src/main/res/layout/: activity_main.xml  db_item.xml
example/src/main/res/menu/: menu_main.xml
example/src/main/res/values/: strings.xml  themes.xml
example/src/main/res/values-night/: themes.xml
gradle/: deps.versions.toml
gradle/wrapper/: gradle-wrapper.properties
leveldb_android/: build.gradle.kts  proguard-rules.txt
leveldb_android/src/main/: AndroidManifest.xml
leveldb_android/src/main/java/com/edwardstock/leveldb/: AndroidLevelDB.kt  AndroidLevelDBInstance.kt
leveldb_kt/: build.gradle.kts
leveldb_kt/src/main/java/com/edwardstock/leveldb/: Bytes.kt  Iterator.kt  LevelDB.kt  Snapshot.kt  ValueAdapter.kt  WriteBatch.kt
leveldb_kt/src/main/java/com/edwardstock/leveldb/exception/: LevelDBClosedException.kt  LevelDBCorruptionException.kt  LevelDBException.kt  LevelDBIOException.kt  LevelDBIteratorNotValidException.kt  LevelDBNoTypeAdapterException.kt  LevelDBNotFoundException.kt  LevelDBSnapshotOwnershipException.kt
leveldb_kt/src/main/java/com/edwardstock/leveldb/implementation/: Adapters.kt  LevelDBInstance.kt  NativeIterator.kt  NativeLevelDB.kt  NativeLevelDBSingle.kt  NativeSnapshot.kt  NativeWriteBatch.kt  SimpleWriteBatch.kt  Utils.kt
native/: CMakeLists.txt
native/binding/: com_edwardstock_leveldb_implementation_NativeIterator.cpp  com_edwardstock_leveldb_implementation_NativeIterator.h  com_edwardstock_leveldb_implementation_NativeLevelDB.cpp  com_edwardstock_leveldb_implementation_NativeLevelDB.h  com_edwardstock_leveldb_implementation_NativeWriteBatch.cpp  com_edwardstock_leveldb_implementation_NativeWriteBatch.h  gen-java-headers  leveldb_logger.cpp  leveldb_logger.h
(+18 files in other folders)
